[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "c78-pytils"
version = "0.1.0"
description = "Python utils I keep needing."
requires-python = ">=3.10"
dependencies = [
    "cbor2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]